--- a/main/static/css/main.css
+++ b/main/static/css/main.css
@@ -13,3 +13,65 @@ html, body {
     justify-content: center;
     -webkit-justify-content: center;
 }
+
+#calendar-week {
+    margin-bottom: 50px;
+}
+
+#calendar-week .column {
+    padding: 0 0 0 0;
+}
+
+.day {
+    border-color: #4A4A4A;
+    color: #FFF;
+    border-left: 1px solid #8F8F8F;
+    border-bottom: 1px solid #8F8F8F;
+    font-size: 12px;
+    cursor: pointer;
+}
+
+.day:hover {
+    filter: brightness(70%);
+}
+
+.day-banner {
+    background-color: #333333;
+    color: #FFF;
+    padding: 10px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: 12px;
+    font-weight: 600;
+}
+
+.day-details {
+    padding: 10px;
+}
+
+.day-details:last-child {
+    border-right: 1px solid #8F8F8F;
+}
+
+.day-event {
+    margin-top: 6px;
+    margin-bottom: 6px;
+    display: block;
+    color: #4C4C4C;
+    padding: 5px;
+}
+
+.details {
+    display: block;
+}
+
+input {
+    background: none;
+    border: 0;
+    border-bottom: 1px solid #FFF;
+    width: 100%;
+}
+
+input:focus {
+    outline: none;
+}
