--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -3,7 +3,9 @@
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.1/css/bulma.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"/>
-    <link rel="stylesheet" href="../static/css/main.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../static/css/main.css"/>
     <meta charset="UTF-8">
     <title>Calendar</title>
 </head>
@@ -12,15 +14,5 @@
     {% block calendarWeek %}{% endblock %}
     {% block calendarEntry %}{% endblock %}
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.12/vue.min.js"></script>
-<script>
-    calendarWeek = new Vue(
-        {
-            el: '#calendar-week',
-            delimiters: ['#{', '}'],
-            data: {{ days }}
-        }
-    );
-</script>
 </body>
 </html>
